--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
 
     <groupId>org.neo4j</groupId>
     <artifactId>neo4j-ogm</artifactId>
-    <version>3.2.2-SNAPSHOT</version>
+    <version>3.2.2.ocp-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>Neo4j-OGM</name>
@@ -205,7 +205,7 @@
         <lucene.version>5.5.5</lucene.version>
         <neo4j.version>3.4.16</neo4j.version>
         <neo4j.edition>enterprise</neo4j.edition>
-        <neo4j-java-driver.version>4.0.0-beta02</neo4j-java-driver.version>
+        <neo4j-java-driver.version>4.0.3</neo4j-java-driver.version>
         <ogm.properties>ogm-bolt.properties</ogm.properties>
         <maven-jar-plugin.version>3.0.1</maven-jar-plugin.version>
         <maven-checkstyle-plugin.version>3.0.0</maven-checkstyle-plugin.version>
